tests/golden/type_errors/named_struct_extra_field.err
Type error at 2:48: extra field `title` for struct `Person`
  let p: Person = Person { name: "Ada", age: 36, title: "Dr" };
                                                 ^
